--- a/src/app/portafolio/portafolio.component.html
+++ b/src/app/portafolio/portafolio.component.html
@@ -1,10 +1,11 @@
 <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
-  <div class="md:container mx-auto p-8 flex flex-wrap" style="">
+  <div class="md:container mx-auto p-8 flex flex-wrap" >
     <div
       class="rounded-md border hover:shadow-xl p-4 m-1 grid justify-items-center"
       style="width: 18rem;"
-      *ngFor="let item of portafolio"
+      *ngFor="let item of dato"
     >
+   
       <fa-icon
         [icon]="item.img"
         style="font-size:3rem;color:#51bde8;border-radius:50%"
@@ -15,12 +16,13 @@
         >
           {{ item.title }}
         </h5>
-        <p class="font-serif mb-4 text-white">
+        <p class="font-serif mb-4 text-gray-500">
           {{ item.description }}
         </p>
         <a
-          href="#"
-          class="rounded-md bg-gray-800 p-1 mb-0 text-gray-400 hover:text-white px-3.5 py-2.5 z-50 text-sm font-semibold shadow-sm focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
+        routerLink="{{item.title}}"
+          
+          class="rounded-md lowercase bg-gray-800 p-1 mb-0 text-gray-400 hover:text-white px-3.5 py-2.5 z-50 text-sm font-semibold shadow-sm focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
           >Go somewhere</a
         >
       </div>
