--- a/src/app/portafolio/portafolio.component.html
+++ b/src/app/portafolio/portafolio.component.html
@@ -20,7 +20,7 @@
           {{ item.description }}
         </p>
         <a
-        routerLink="{{item.title}}"
+        routerLink="portafolio/{{item.title}}"
           
           class="rounded-md lowercase bg-gray-800 p-1 mb-0 text-gray-400 hover:text-white px-3.5 py-2.5 z-50 text-sm font-semibold shadow-sm focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
           >Go somewhere</a
